<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_actividad4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.andreslim.myapplication.Actividad4">


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/R"
        android:text="@string/R"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/G"
        android:text="@string/G"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/B"
        android:text="@string/B"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/botonCheck"
        android:text="@string/comp"/>



    <!--Hace el Scroll por la pantalla-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:text="CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1000dp"
                android:id="@+id/imageView" />


            <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/interruptor"
                android:textOn="@string/botonOn"
                android:textOff="@string/botonOff"/>


        </LinearLayout>

    </ScrollView>




</LinearLayout>
